# rust_csv_example

./: Cargo.toml  food-data_csv.csv
src/: main.rs
